[gd_scene load_steps=16 format=3 uid="uid://b55lwecpo8ylh"]

[ext_resource type="Script" uid="uid://dxcp20yhuff1v" path="res://objects/gameObjects/craftingStations/craftingTable/crafting_station.gd" id="1_680vj"]
[ext_resource type="Texture2D" uid="uid://clir0wep20mrp" path="res://assets/sprites/SRW_Marketplace_tileset_B.png" id="2_haads"]
[ext_resource type="FontFile" uid="uid://dtnklu3br6a36" path="res://assets/fonts/PixelOperator8.ttf" id="3_su0yg"]
[ext_resource type="PackedScene" uid="uid://buh80fmiavo1m" path="res://ui/ui/crafting_station_ui.tscn" id="4_uf7w3"]
[ext_resource type="Texture2D" uid="uid://gybsn2debeah" path="res://assets/Items/Material/Wood Log.png" id="5_4eju8"]
[ext_resource type="Script" path="res://RecourceToItem.gd" id="6_eg64c"]
[ext_resource type="Texture2D" uid="uid://djff8g8874i45" path="res://assets/Items/Material/Wooden Plank.png" id="6_rmjai"]
[ext_resource type="Texture2D" uid="uid://hpv4wspcx65w" path="res://assets/Items/Material/Rope.png" id="7_bpaap"]
[ext_resource type="Texture2D" uid="uid://d0sws7d35kij6" path="res://assets/Items/Material/String.png" id="8_tupxo"]
[ext_resource type="PackedScene" uid="uid://ddf2gmmxpckw3" path="res://ui/elements/crafting/RecourceToItem.tscn" id="11_5wr1h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uxy2h"]
size = Vector2(20, 18)

[sub_resource type="CircleShape2D" id="CircleShape2D_6gnsm"]
radius = 25.1794

[sub_resource type="Animation" id="Animation_08xmn"]
length = 0.001

[sub_resource type="Animation" id="Animation_kam8a"]
resource_name = "text"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hb43j"]
_data = {
&"RESET": SubResource("Animation_08xmn"),
&"text": SubResource("Animation_kam8a")
}

[node name="crafting_station" type="StaticBody2D"]
position = Vector2(1, 0)
script = ExtResource("1_680vj")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_haads")
region_enabled = true
region_rect = Rect2(483, 675, 93, 90)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uxy2h")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_6gnsm")

[node name="Label" type="Label" parent="."]
z_index = 3
offset_left = -53.0
offset_top = -24.0
offset_right = 52.0
offset_bottom = -1.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.147672, 0.147672, 0.147672, 1)
theme_override_fonts/font = ExtResource("3_su0yg")
theme_override_font_sizes/font_size = 8
text = "Press 'E' to open"
visible_characters = 0
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hb43j")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CraftingStationUI" parent="CanvasLayer" instance=ExtResource("4_uf7w3")]

[node name="RecourceToItem" parent="CanvasLayer/CraftingStationUI/ScrollContainer/VBoxContainer" index="0" instance=ExtResource("11_5wr1h")]
layout_mode = 2
script = ExtResource("6_eg64c")
recourcesNeeded = Dictionary[String, int]({
"Wood": 10
})
craftetItemsRecieved = Dictionary[String, int]({
"Plank": 1
})
spriteOfRecource = ExtResource("5_4eju8")
spriteOfItem = ExtResource("6_rmjai")

[node name="RecourceToItem2" parent="CanvasLayer/CraftingStationUI/ScrollContainer/VBoxContainer" index="1" instance=ExtResource("11_5wr1h")]
layout_mode = 2
script = ExtResource("6_eg64c")
recourcesNeeded = Dictionary[String, int]({
"Rope": 10
})
craftetItemsRecieved = Dictionary[String, int]({
"Strings": 1
})
spriteOfRecource = ExtResource("7_bpaap")
spriteOfItem = ExtResource("8_tupxo")

[node name="RecourceToItem3" parent="CanvasLayer/CraftingStationUI/ScrollContainer/VBoxContainer" index="2" instance=ExtResource("11_5wr1h")]
layout_mode = 2
script = ExtResource("6_eg64c")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]

[editable path="CanvasLayer/CraftingStationUI"]
